--- a/html/employeeDetails.html
+++ b/html/employeeDetails.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/libs/bootstrap.min.css">
     <script src="/libs/bootstrap.min.js"></script>
     <script src="/js/empDetails.js"></script>
+      <script src="/js/genericFunctions.js"></script>
 </head>
 
 <body>
