--- a/html/summary.html
+++ b/html/summary.html
@@ -123,7 +123,6 @@
         console.log(userAction);
         var empId = empDetails.empId;
 
-
         $.ajax({
             type: 'POST',
             url: window.location.origin+'/summary',
@@ -132,6 +131,7 @@
            
             success: function(res){
                 console.log(res);
+                window.localStorage.clear();
             },
             error:function(err) {
                 console.log(err);
