--- a/html/summaryMgr.html
+++ b/html/summaryMgr.html
@@ -168,6 +168,7 @@
 
                         window.location = window.location.origin+'/download/'+empId;
                         console.log(res);
+                        window.localStorage.clear();
                     },
                      error:function(err) {
                         console.log(err);
